fix:complete search part
